# bitset-matrix

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
benches/: bit_ops.rs
examples/: n_queens.rs  sudoku.rs
src/: lib.rs  simd.rs
tests/: property_tests.rs  simd_smoke.rs
