[package]
name = "bitset-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]

[features]
# `simd` is a feature toggle for future SIMD backends. Currently it uses
# a scalar fallback implementation to ensure portability across toolchains.
simd = []

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
rand = "0.8"
